{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 7,
  "lineage": "d304dc88-4798-8af4-d3c1-7aa1d6558786",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774305592921:internet-gateway/igw-0e25379d89d9f53fb",
            "id": "igw-0e25379d89d9f53fb",
            "owner_id": "774305592921",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-08e5d53e5b69068c2"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774305592921:route-table/rtb-0bca598a763f9aca1",
            "id": "rtb-0bca598a763f9aca1",
            "owner_id": "774305592921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e25379d89d9f53fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e5d53e5b69068c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_local",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df1c3a0bc02ba516",
            "route_table_id": "rtb-0bca598a763f9aca1",
            "subnet_id": "subnet-07ac9d04749b62aa5"
          },
          "dependencies": [
            "aws_internet_gateway.dev_local",
            "aws_route_table.dev_rt",
            "aws_subnet.dev_local",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774305592921:security-group/sg-0cb05b4e72d915bf8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb05b4e72d915bf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "774305592921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_sg"
            },
            "tags_all": {
              "Name": "dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e5d53e5b69068c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774305592921:subnet/subnet-07ac9d04749b62aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ac9d04749b62aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "774305592921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet"
            },
            "tags_all": {
              "Name": "dev_subnet"
            },
            "vpc_id": "vpc-08e5d53e5b69068c2"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:774305592921:vpc/vpc-08e5d53e5b69068c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddc87dd059ff2d97",
            "default_route_table_id": "rtb-08e98bcb16252d4d9",
            "default_security_group_id": "sg-0338ca62be3ddcdc7",
            "dhcp_options_id": "dopt-04d5d298326b8bc61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e5d53e5b69068c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e98bcb16252d4d9",
            "owner_id": "774305592921",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}